--- a/experiments/2-corpus-based/Submiterator-master/2-corpus-based.config
+++ b/experiments/2-corpus-based/Submiterator-master/2-corpus-based.config
@@ -4,13 +4,13 @@
 "title":"Sentences of English",
 "description":"Answer questions about the interpretations of sentences",
 "nameofexperimentfiles":"2-corpus-based",
-"experimentURL":"https://web.stanford.edu/~scontras/CollectivePredication/2-corpus-based/2-corpus-based/2-corpus-based.html"
+"experimentURL":"https://web.stanford.edu/~scontras/CollectivePredication/2-corpus-based/2-corpus-based/2-corpus-based.html",
 "keywords":"language research stanford fun cognitive science university",
 "USonly?":"yes",
 "minPercentPreviousHITsApproved":"95",
 "frameheight":"650",
-"reward":"0.25",
-"numberofassignments":"30",
+"reward":"0.3",
+"numberofassignments":"90",
 "assignmentduration":"1800",
 "hitlifetime":"2592000",
 "autoapprovaldelay":"60000",
