long expt results

--- a/experiments/13-dimensional/Submiterator-master/dimensional-pilot.config
+++ b/experiments/13-dimensional/Submiterator-master/dimensional-pilot.config
@@ -3,13 +3,13 @@
 "liveHIT":"yes",
 "title":"Adjectives of English",
 "description":"Answer questions about the interpretations of adjectives",
-"nameofexperimentfiles":"long-square",
-"experimentURL":"https://web.stanford.edu/~scontras/CollectivePredication/12-long/long.html",
+"nameofexperimentfiles":"dimensional-pilot",
+"experimentURL":"https://web.stanford.edu/~scontras/CollectivePredication/13-dimensional/dimensional.html",
 "keywords":"language research stanford fun cognitive science university",
 "USonly?":"yes",
 "minPercentPreviousHITsApproved":"95",
 "frameheight":"650",
-"reward":"0.25",
+"reward":"0.50",
 "numberofassignments":"9",
 "assignmentduration":"1800",
 "hitlifetime":"2592000",
