--- a/experiments/13-dimensional/Submiterator-master/dimensional.config
+++ b/experiments/13-dimensional/Submiterator-master/dimensional.config
@@ -3,7 +3,7 @@
 "liveHIT":"yes",
 "title":"Adjectives of English",
 "description":"Answer questions about the interpretations of adjectives",
-"nameofexperimentfiles":"dimensional-pilot",
+"nameofexperimentfiles":"dimensional",
 "experimentURL":"https://web.stanford.edu/~scontras/CollectivePredication/13-dimensional/dimensional.html",
 "keywords":"language research stanford fun cognitive science university",
 "USonly?":"yes",
