--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ corpora/results/
 writing/Cubert/reviews/Review-notes.md
 
 writing/Cubert/reviews/Review-notes.rtf
+
+model/~$plural-predication-wppl.xlsx
