revision cover letter

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ writing/Cubert/reviews/Review-notes.md
 writing/Cubert/reviews/Review-notes.rtf
 
 model/~$plural-predication-wppl.xlsx
+
+writing/Cubert/revision/Cubert cover letter.out
