--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ writing/Cubert/revision/Cubert cover letter.out
 experiments/Persistence.v14.manipulationcheck4/experiment_persistence.v14-master/~$items.xlsx
 
 *.ps
+
+writing/Cubert/revision2/Cubert cover letter2.out
+
+writing/Cubert/revision2/Cubert cover letter2.tex
+
+writing/Cubert/revision2/Cubert revision2.spl
