--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ experiments/Persistence.v14.manipulationcheck4/experiment_persistence.v14-master
 
 writing/Cubert/revision2/Cubert cover letter2.out
 
-writing/Cubert/revision2/Cubert cover letter2.tex
-
 writing/Cubert/revision2/Cubert revision2.spl
+
+writing/Cubert/revision/reviews/
+
