--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ writing/Cubert/revision2/Cubert revision2.spl
 
 writing/Cubert/revision/reviews/
 
+
+writing/Cubert/revision/reviews/Review-notes.rtf
+
+writing/Cubert/revision/reviews/Review-notes.md
